# micropython-step-sequencer

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
.github/: copilot-instructions.md
.mise-tasks/: clear_mcu
docs/: ARCHITECTURE.md
lib-dev/: unittest_helper.py
lib/mcp23017/: LICENSE  SOURCE  __init__.py  rotary.py
lib/midi/: LICENSE  SOURCE  __init__.py
lib/mpr121/: LICENSE  SOURCE  __init__.py
lib/rotary/: LICENSE  SOURCE  __init__.py
lib/sh1106/: LICENSE  SOURCE  __init__.py
src/: main.py  neopixel_test.py  oled_display_test.py
src/lib/chord_machine/: __init__.py  chord_engine.py  chord_machine_app.py  constants.py  hal_protocol.py  music_theory.py  ui_state.py
src/plat_computer/: usb_midi_send.py
src/plat_mcu/: chord_machine_main.py  hal_mcu.py  main.py  oled_display_test.py  package.json  package_libs.json  usb_midi_test.py
src/plat_mcu/_test_and_debug_stuff/: 16x_button_test_mcp23017.py  16x_neopixel_ledstrip_test.py  button_test.py  button_test_mcp23017.py  fs_test1.py  mpr121_debug.py  mpr121_touch_sensor_test.py  neopixel_matrix_fun1.py  neopixel_test.py  oled_display_sh1106_128x64_test.py  oled_display_sh1106_128x64_test2.py  oled_display_test.py  rotary_irq_test.py  trs_midi_in_test.py  trs_midi_out_debug.py  trs_midi_out_in_debug.py  trs_midi_out_in_debug_rmt.py  trs_midi_out_test.py  wifi_ssl_test1.py  wifi_ssl_test2.py  wifi_ssl_test3.py  ws2812_led_strip_test.py
src/plat_mcu/static/: index.html  index_ws.html
src/plat_mcu/utils/: button.py
src/plat_web/: app.py  bootstrap.py  index.html  pyscript.json
src/plat_web/static/css/: styles.css
src/plat_web/static/js/: main.js
test/: mock_hal.py  run_tests.py  test_chord_machine.py  test_mylib.py
